--- a/css/style.css
+++ b/css/style.css
@@ -98,43 +98,34 @@ html {
 .nav-container_responsive{
     display: none;
 }
+  
+/* Home Page */
 
-/* HOME PAGE */
-.swiper {
+.home_swiper-container .swiper {
     width: 100%;
     height: 100vh;
   }
   
-  .swiper img {
+  .home_swiper-container .swiper .img {
     width: 100%;
     height: 100vh;
   }
+  
   .about_us {
     padding-top: 100px;
   }
-  .img2 {
+  .about_us .img {
+    width: 100%;
+    height: 370px;
+  }
+  .about_us .img .img1 {
+    width: 300px;
+    height: 200px;
     position: relative;
     left: 115px;
     bottom: 40px;
   }
-  .butt {
-    margin-top: 32px;
-    background-color: #c90f16;
-    border: none;
-    color: white;
-    padding: 8px 28px;
-    border-radius: 10px;
-  }
-  .fafa-long-arrow-right {
-    position: relative;
-    left: 20px;
-  }
-  .butt {
-  }
-  .about {
-    line-height: 250%;
-  }
-  .aboutus {
+  .about_container .aboutus_word {
     background-color: #fae7e8;
     width: fit-content;
     border-radius: 5px;
@@ -144,18 +135,91 @@ html {
     padding-right: 10px;
     color: #c90f16;
   }
-  .service_container {
+  
+  .about_us .button {
+    margin-top: 32px;
+    background-color: #c90f16;
+    border: none;
+    color: white;
+    padding: 8px 28px;
+    border-radius: 10px;
+    transition-duration: 0.3s;
+    transition-property: all;
+    transition-timing-function: ease-in-out;
+  }
+  
+  .about_us .button:hover {
+    transform: translateX(5px);
+  }
+  .ourservice_class {
     background-color: #f3f5f7;
   }
+  
   .service_container {
     padding-top: 100px;
     padding-bottom: 100px;
   }
-  .ourservice {
+  .service_container .ourservice_word {
     background-color: #fae7e8;
-    width: fit-content;
-    position: relative;
+    /* width: fit-content; */
+    /* position: relative;
     left: 600px;
+    border-radius: 5px; */
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: #c90f16;
+  }
+  
+  .how_it_work_container {
+    padding-top: 100px;
+  }
+  .how_it_work_container .paragraph {
+    background-color: #fbe9ea;
+    border-radius: 10px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .how_it_work_class .button {
+    margin-top: 32px;
+    background-color: #c90f16;
+    border: none;
+    color: white;
+    padding: 8px 28px;
+    border-radius: 10px;
+    transition-duration: 0.3s;
+    transition-property: all;
+    transition-timing-function: linear;
+  }
+  .bt {
+    height: 60px;
+    width: 70%;
+    border: none;
+    border-radius: 4px;
+    margin-bottom: 40px;
+    background-color: #f3f5f7;
+  }
+  .bt:hover {
+    background-color: #d53136;
+    margin-left: 50px;
+  }
+  
+  .Ourteam_team {
+    background-color: #f3f5f7;
+  }
+  
+  .Ourteam_team .container {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .Ourteam_team .container .paragraph {
+    background-color: #fae7e8;
+    /* width: fit-content; */
+    /* position: relative; */
+    /* left: 600px; */
     border-radius: 5px;
     padding-top: 2px;
     padding-bottom: 2px;
@@ -164,7 +228,78 @@ html {
     color: #c90f16;
   }
   
+  .faq_class {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .faq_class .paragraph {
+    background-color: #fae7e8;
+    width: fit-content;
+    border-radius: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: #c90f16;
+  }
+  
+  .faq_class .bt {
+    background-color: #c90f16;
+    border: none;
+    color: white;
+    padding: 8px 28px;
+    border-radius: 10px;
+    transition-duration: 0.5s;
+    transition-property: all;
+    transition-timing-function: ease-in-out;
+  }
+  
+  .faq_class .container .bt :hover {
+    transform: translateX(0px);
+  }
+  
+  .accordion-item:hover {
+    background-color: #c90f16;
+    color: #f3f5f7;
+  }
+  .accordion-item:hover {
+  }
+  .blog {
+    background-color: #fae7e8;
+    color: #c90f16;
+    width: fit-content;
+    position: relative;
+    left: 45%;
+    border-radius: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  
+  /* .ourblog_class {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  } */
+  
+  .ourblog_class .paragraph {
+    background-color: #fae7e8;
+    color: #c90f16;
+    width: fit-content;
+    position: relative;
+    left: 45%;
+    border-radius: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
   /* SERVICE PAGE */
+  .our_service_text{
+    font-weight: 800;
+    font-size: 40px;
+    padding: 50px 0px 0px 0px;
+  }
   .service-container .top_img-container img {
     width: 100%;
   }
@@ -387,8 +522,7 @@ html {
     background-color: #c90f16;
     color: #f3f5f7;
   }
-  .accordion-item:hover {
-  }
+
   .blog {
     background-color: #fae7e8;
     color: #c90f16;
@@ -684,7 +818,7 @@ footer{
     font-weight: 700;
 }
 .contact_us-container {
-    padding: 90px 0 90px 0;
+    padding: 100px 0 90px 0;
 }
 .contact_us-container .container .fade-in{
     display: flex;
