--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ html {
   }
   .about_us .img {
     width: 100%;
-    height: 370px;
+    /* height: 370px; */
   }
   .about_us .img .img1 {
     width: 300px;
@@ -129,8 +129,8 @@ html {
     background-color: #fae7e8;
     width: fit-content;
     border-radius: 5px;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
     color: #c90f16;
@@ -153,35 +153,38 @@ html {
   }
   .ourservice_class {
     background-color: #f3f5f7;
+    margin: 50px 0px 0px 0px;
   }
   
   .service_container {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
   .service_container .ourservice_word {
     background-color: #fae7e8;
-    /* width: fit-content; */
-    /* position: relative;
-    left: 600px;
-    border-radius: 5px; */
-    padding-top: 2px;
-    padding-bottom: 2px;
+    width: fit-content;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
     color: #c90f16;
   }
+
+  
   
   .how_it_work_container {
     padding-top: 100px;
   }
   .how_it_work_container .paragraph {
-    background-color: #fbe9ea;
-    border-radius: 10px;
-    padding-top: 1px;
-    padding-bottom: 1px;
+    background-color: #fae7e8;
+    width: fit-content;
+    border-radius: 5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     padding-left: 10px;
     padding-right: 10px;
+    color: #c90f16;
   }
   .how_it_work_class .button {
     margin-top: 32px;
@@ -221,8 +224,8 @@ html {
     /* position: relative; */
     /* left: 600px; */
     border-radius: 5px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
     color: #c90f16;
@@ -289,8 +292,8 @@ html {
     position: relative;
     left: 45%;
     border-radius: 4px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
   }
