--- a/sub-pages/projects/project.css
+++ b/sub-pages/projects/project.css
@@ -47,12 +47,12 @@
 .labour-details_container{
    /* background-color:#c7c7c7; */
    background: rgba( 255, 255, 255, 0.25 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 13.5px );
--webkit-backdrop-filter: blur( 13.5px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
-   margin: 10px 0 10px  0;
+   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+   backdrop-filter: blur( 13.5px );
+   -webkit-backdrop-filter: blur( 13.5px );
+   border-radius: 10px;
+   border: 1px solid rgba( 255, 255, 255, 0.18 );
+   margin: 10px 2px 10px 2px;
    border-radius: 10px;
 }
 
@@ -90,7 +90,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .project_list-container{
-   padding: 50px 0 100px 0;
+   padding: 50px 0 20px 0;
 }
 
 
