--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
     padding: 0;
+}
+body{
+  scroll-snap-type: y proximity; /* Enables smooth snapping */
 }
 html {
     scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif !important;
 }
 .main-container{
     font-size: 16px;
@@ -45,17 +50,22 @@ html {
 
 
 /* NAV BAR */
-
+.nav-container{
+  /* position: fixed; */
+  /* z-index: 100000;
+  width: 100%; */
+  /* background-color: #16005f; */
+}
 .nav-container .container .logo img{
     width: 100px;
 }
 
 .nav-container .container{
     display: flex;
-    padding: 0px;
     backdrop-filter: blur(10px);
     padding: 0px 32px;
     border-radius: 4px;
+    /* margin-top: 20px; */
     background: rgba(255, 255, 255, 0.1);
 }
 
@@ -103,7 +113,7 @@ html {
 
 .home_swiper-container .swiper {
     width: 100%;
-    height: 100vh;
+    height: 30vh;
   }
   
   .home_swiper-container .swiper .img {
@@ -128,6 +138,7 @@ html {
   .about_container .aboutus_word {
     background-color: #fae7e8;
     width: fit-content;
+    margin: 10px 0px 10px 0px;
     border-radius: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -773,6 +784,10 @@ html {
     width: 100%;
 }
 
+.nav-tabs{
+  border: none !important;
+}
+
 /* FOOTER */
 .footer-container .container .row{
     padding: 80px 0 80px;
@@ -976,7 +991,7 @@ footer{
 
     .nav-container .container{
         background: none;
-        padding: 0 20px 0 10px;
+        padding: 0 10px 0 10px;
     }
 
     .menu-icon{
@@ -992,7 +1007,9 @@ footer{
         padding: 20px 30px 20px 30px;
         z-index: 100000;
         overflow: hidden; 
-
+    }
+    .home_swiper-container{
+      height: 30vh;
     }
     .main-container .nav-container_responsive{
         top: 0;
@@ -1014,7 +1031,7 @@ footer{
     }
 
     .nav-container_responsive .nav-list{
-        margin: 3rem 0 1rem 0;
+        margin: 2rem 0 0rem 0;
     }
     
     .nav-container_responsive .nav-list li{
@@ -1030,7 +1047,7 @@ footer{
         padding: 7px 7px 7px 7px;
         border-radius: 5px;
         border: none;
-        margin: 20px 0 20px 0;
+        margin: 10px 0 0px 0;
     }
 
     .download_broucher button a{
