--- a/css/style.css
+++ b/css/style.css
@@ -1017,6 +1017,7 @@ footer{
         color: #ffffff;
         height: 100vh;
         width: 100%;
+        overflow-y: scroll;
     }
     .nav-container_responsive .headder-responsive_nav{
         display: flex;
@@ -1100,9 +1101,5 @@ footer{
     .contact_us-container {
         padding: 30px 0 10px 0;
     }
-    /* .contact_us-container .contact_details{
-        display: flex;
-        flex-direction: column;
-    } */
     
   }
