--- a/sub-pages/projects/project.css
+++ b/sub-pages/projects/project.css
@@ -226,13 +226,17 @@
    }
 
    .service-involved-headding{
-      font-size: 50px;
+      font-size: 40px;
       font-weight: 900;
       text-align: center;
-      padding: 20px 0 30px 0;
+      padding: 0px 0 0px 0;
    }
 
    .project_list-container{
       padding: 50px 0 20px 0;
+   }
+
+   .service_involved-container{
+      padding: 0 0 0px 0;
    }
  }
